[package]
name = "hakase"
version = "0.1.0"
authors = ["Zeyi Fan <fanzeyi1994@gmail.com>"]
edition = "2021"

[dependencies]
gotham = "0.2.1"
gotham_derive = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
hyper = "0.11.27"
mime = "0.3.17"
futures = "~0.1.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_urlencoded = "0.7.1"
rusqlite = { version = "0.29", features = ["chrono"] }
rand = "0.5.6"
chrono = "0.4.41"
