[package]
name = "hakase"
version = "0.2.0"
authors = ["Zeyi Fan <fanzeyi1994@gmail.com>"]
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
rusqlite = { version = "0.29", features = ["chrono"] }
rand = "0.8"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
axum-test = "15.0"
